--- a/EZPeaZeeBot/EZPeaZeeBot.csproj
+++ b/EZPeaZeeBot/EZPeaZeeBot.csproj
@@ -13,6 +13,8 @@
     <PackageTags>discord; bot;</PackageTags>
     <NeutralLanguage>en-AU</NeutralLanguage>
     <Copyright>MIT</Copyright>
+    <AssemblyVersion>2.0.0.0</AssemblyVersion>
+    <FileVersion>2.0.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
