--- a/EZPeaZeeBot/EZPeaZeeBot.csproj
+++ b/EZPeaZeeBot/EZPeaZeeBot.csproj
@@ -15,6 +15,8 @@
     <Copyright>MIT</Copyright>
     <AssemblyVersion>2.0.0.0</AssemblyVersion>
     <FileVersion>2.0.0.0</FileVersion>
+    <Authors>SUCC-u-lent</Authors>
+    <Version>2.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
